fixed bottom horizontal scroll

--- a/app_bc/src/components/FrontScroller/FeaturedCards/styles.css
+++ b/app_bc/src/components/FrontScroller/FeaturedCards/styles.css
@@ -32,7 +32,7 @@
 
 .sideCard {
   width: 100%;
-  height: "fit-content";
+  height: fit-content;
   padding: 5px 10px;
   display: flex;
   flex-direction: column;
